some spacing and css issues

--- a/sass/settings/_bootstrap_variables.scss
+++ b/sass/settings/_bootstrap_variables.scss
@@ -19,7 +19,7 @@ $pink:   #CC99A2;
 $purple: #613d7c;
 
 // Create grayscale
-$gray-dark:                 #393d40;
+$gray-dark:                 #263238;
 $gray:                      #55595c;
 $gray-light:                #cecece;
 $gray-lighter:              #dedede;
