--- a/sass/settings/extra_scss.scss
+++ b/sass/settings/extra_scss.scss
@@ -15,6 +15,21 @@
     &-gray-lighter { background-color: $gray-lighter; }
     &-gray-lightest { background-color: $gray-lightest; }
 }
+
+.bg-gray{
+    &-050 { background-color: #fafafa; }
+    &-100 { background-color: #f5f5f5; }
+    &-200 { background-color: #eeeeee; }
+    &-300 { background-color: #e0e0e0; }
+    &-400 { background-color: #bdbdbd; }
+    &-500 { background-color: #9e9e9e; }
+    &-600 { background-color: #757575; }
+    &-700 { background-color: #616161; }
+    &-800 { background-color: #424242; }
+    &-900 { background-color: #212121; }
+    &-950 { background-color: #121212; }
+}
+
 .text {
     &-white { color: $white; }
     &-black { color: $black; }
